cmd/bug-exportor/deployment/bug-exportor.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: bug-exportor
  name: bug-exportor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bug-exportor
  template:
    metadata:
      labels:
        app: bug-exportor
    spec:
      containers:
      - image: quay.io/eparis/bug-exportor:latest
        imagePullPolicy: Always
        name: bug-exportor
        resources: {}
        volumeMounts:
        - mountPath: /etc/bugzilla
          name: bugzilla-api-key
          readOnly: true
        - mountPath: /etc/github/
          name: github-api-key
          readOnly: true
        - mountPath: /var/run/
          name: team-config
          readOnly: true
        ports:
        - name: web
          containerPort: 8000
          protocol: TCP
      restartPolicy: Always
      volumes:
      - name: bugzilla-api-key
        secret:
          defaultMode: 420
          secretName: bugzilla-api-key
      - name: github-api-key
        secret:
          defaultMode: 420
          secretName: github-api-key
      - configMap:
          defaultMode: 420
          name: test-team-data
        name: team-config
