cmd/bug-exportor/deployment/bug-exportor.service.yml
apiVersion: v1
kind: Service
metadata:
  name: bug-exportor
spec:
  ports:
  - port: 8000
    protocol: TCP
    targetPort: web
  selector:
    app: bug-exportor
  type: ClusterIP
